<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageFinder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="filter">Filter</string>
    <string name="title_activity_filter">FilterActivity</string><string name="searchOptionsHeader">Advanced Search Options</string><string name="filterImageSize">Image Size</string><string name="filterColor">Color</string><string name="filterImageType">Image Type</string><string name="filterSite">Site</string>

</resources>
