<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.natashatherobot.app.FilterActivity"
    tools:ignore="MergeRootFrame" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:text="@string/searchOptionsHeader"
                android:id="@+id/tvFilterHeader"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filterImageSize"
                android:id="@+id/tvFilterImageSize"
                android:layout_below="@+id/tvFilterHeader"
                android:layout_alignParentStart="true"
                android:layout_marginTop="40dp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sprImageSize"
                android:layout_alignBottom="@+id/tvFilterImageSize"
                android:layout_toRightOf="@+id/tvFilterImageSize"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filterColor"
                android:id="@+id/tvFilterColor"
                android:layout_below="@+id/tvFilterImageSize"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="40dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sprColorFilter"
                android:layout_alignBottom="@+id/tvFilterColor"
                android:layout_alignStart="@+id/sprImageSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filterImageType"
                android:id="@+id/tvFilterImageType"
                android:layout_below="@+id/tvFilterColor"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="40dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sprImageType"
                android:layout_alignBottom="@+id/tvFilterImageType"
                android:layout_alignStart="@+id/sprImageSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filterSite"
                android:id="@+id/tvFilterSite"
                android:layout_below="@+id/tvFilterImageType"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="40dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etSiteFilter"
                android:layout_alignBottom="@+id/tvFilterSite"
                android:layout_alignStart="@+id/sprImageSize"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
